# notoma

./: .env.sample  .flake8  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  NetrwTreeListing  PLAN.md  Pipfile  README.md  config.yaml  config.yaml.sample  go.mod  go.sum  pyproject.toml  requirements-base.txt  requirements-dev.txt  settings.ini  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  docker.yaml  lint.yml  linters.yml  main.yml  release-drafter.yml  release.yml  test-homebrew.yml  tests.yml
cmd/notion-sync/: main.go  sync.go
cmd/notoma/: cli.go  main.go  status.go  status_test.go  sync.go  sync_test.go  validate.go  validate_test.go
docs/: 00_core.md  Gemfile  _config.yml  blogs-using-notoma.md  configuration.md  contributing.md  core.html  dev_scripts.html  index.html  index.md  more-examples.md  scripts.md  sidebar.json  supported-markdown-tags.md  supported-markdown.md  using-the-cli.md
internal/config/: config.go  config_test.go
internal/notion/: client.go  client_integration_test.go  client_test.go  ratelimit.go  ratelimit_test.go  smoke_test.go  url.go  url_test.go  workerpool.go  workerpool_test.go
internal/sync/: attachment_state.go  attachment_state_test.go  state.go  state_test.go  sync.go  timestamp.go  timestamp_test.go
internal/transform/: attachments.go  attachments_test.go  base.go  base_test.go  dates.go  dates_test.go  markdown.go  markdown_test.go  richtext.go  richtext_test.go
internal/tui/: model.go  runner.go
internal/writer/: writer.go
internal/zipimport/: converter.go  converter_test.go  importer.go  parser.go  parser_test.go  reader.go  reader_test.go
notebooks/: 00_core.ipynb  01_dev_scripts.ipynb  contributing.ipynb  index.ipynb  scripts.ipynb  using-the-cli.ipynb
notoma/: _nbdev.py  cli.py  config.py  core.py  dev.py  dev_scripts.py  logging.py  page.py  scripts.py  templates.py
notoma/templates/: docs-jekyll.md.j2  extended-docs-md.tpl  post.md.j2
notoma/templates/blocks/: _callout.md.j2  (+11 more)
(+1 files in other folders)
