[tool.poetry]
name = "notoma"
version = "0.2.2"
description = ""
authors = ["Nate Gadzhibalaev <nate@respawn.io>"]


[tool.poetry.dependencies]
python = ">=3.6"
notion = ">=0.0.25"
python-dotenv = "*"
click = "*"
jinja2 = "*"


[tool.poetry.dev-dependencies]
pre-commit = "*"
black = { version = "*", allow-prereleases = true }
flake8 = "*" 

jupyter = "*"
jupyter_contrib_nbextensions = "*"
nbconvert = "*"
nbformat = "*"
nbexec = "*"
twine = "*"


[tool.black]
max-line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
