[tool.poetry]
name = "notoma"
version = "0.2.7"
description = "Write and publish your blog articles from Notion."
authors = ["Nate Gadzhibalaev <nate@respawn.io>"]

license = "Apache-2.0"
readme = "README.md"
homepage = "https://xnutsive.github.io/notoma"
repository = "https://github.com/xnutsive/notoma"
keywords = ["Notion", "blog", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed"
]

# What files from the repo to include in the package
include = ["LICENSE", "CONTRIBUTING.md", "README.md", ".env.sample"]

[tool.poetry.scripts]
notoma-dev = "notoma.dev:cli"
notoma = "notoma.cli:runner"

[tool.poetry.dependencies]
python = ">=3.6"
notion = ">=0.0.25"
python-dotenv = "*"
click = "*"
jinja2 = "*"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = { version = "*", allow-prereleases = true }
flake8 = "*" 

jupyter = "*"
jupyter_contrib_nbextensions = "*"
nbconvert = "*"
nbformat = "*"
nbexec = "*"


[tool.black]
max-line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

